--- a/index.html
+++ b/index.html
@@ -1,5 +1,18 @@
 <html>
+    <head>
+        <title>CONVERSE</title>
+        <link rel="stylesheet" href="style.css">
+        <meta charset="UTF-8">
+        <meta name="description" content="Political Discussion Chat Website">
+        <meta name="keywords" content="Politics,CONVERSE,converse,CS160, discussion, chat">
+        <meta name="author" content="CONVERSE APP">
+
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <script src="src/index.js"></script>
+    </head>
     <body>
-        <p>Hi, This is CONVERSE</p>
+        <div id="hgrad">
+            <p>Hi, This is CONVERSE</p>
+        </div>
     </body>
 </html>
