--- a/application.html
+++ b/application.html
@@ -1,6 +1,7 @@
 <head>
   <title>Converse App</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
   <link rel="icon" href="/favicon.ico">
 </head>
 
